Correction scroll droite à gauche en repsonsive à cause du header_wrapper .nav_menu pour son gap

--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ body {
 
 .header_wrapper .nav_menu {
   display: flex;
-  gap: 6rem;
+  gap: 2rem;
   margin-left: 4rem;
 }
 
@@ -604,21 +604,11 @@ footer {
 }
 
 .modal-content {
-  /* margin: auto; */
-  /* background-color: #fefefe; */
-  /* border: 1px solid #888; */
-  /* width: 80%; */
-  /* max-width: 600px; */
-  /* overflow-y: auto;  */
-  /* max-height: 80vh;  */
-} 
-
-.modal-content {
   background-color: #fefefe;
   margin: 6% auto;
   padding: 15px;
   border: 1px solid #888;
-  width: 80%;
+  width: 60%;
   text-align: center;
   }
 
@@ -628,6 +618,10 @@ footer {
 
 /* Pour les tablettes */
 @media screen and (max-width: 1800px) {
+
+nav{
+  width: auto;
+}
 
   .btn {
     padding: 0 1rem;
@@ -660,11 +654,13 @@ footer {
     overflow: auto;
     z-index: 9999;
     transition: all 0.3s ease; /* Ajout de transition pour un effet d'agrandissement en douceur */
-  
   }
+
+  .modal-content {
+    width: 80%;
+    }
+  
 }
-
-
 
 /* Pour les appareils mobiles */
 
@@ -679,9 +675,7 @@ footer {
     padding: 20px;
     border-radius: 10px;
     width: 420px;
-    /* max-width: 80%;
-    max-height: 80%; */
-    overflow: auto;
+    overflow: hidden;
     z-index: 9999;
     transition: all 0.3s ease; /* Ajout de transition pour un effet d'agrandissement en douceur */
   
